force-app/main/default/objects/PgM_Workstream__c/PgM_Workstream__c.object-meta.xml
<CustomObject>
    <label>Workstream</label>
    <nameField>
        <label>Workstream Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workstreams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>