force-app/main/default/objects/PgM_Workstream__c/fields/PgM_Active__c.field-meta.xml
<CustomField>
    <fullName>PgM_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>