force-app/main/default/objects/PgM_Workstream__c/fields/PgM_Description__c.field-meta.xml
<CustomField>
    <fullName>PgM_Description__c</fullName>
    <label>Description</label>
    <length>30000</length>
    <type>Html</type>
</CustomField>