force-app/main/default/objects/PgM_Workstream__c/fields/PgM_Product_Leader__c.field-meta.xml
<CustomField>
    <fullName>PgM_Product_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Workstreams</relationshipName>
    <type>Lookup</type>
</CustomField>