force-app/main/default/objects/PgM_Workstream__c/fields/PgM_Program__c.field-meta.xml
<CustomField>
    <fullName>PgM_Program__c</fullName>
    <label>Program</label>
    <referenceTo>PgM_Program__c</referenceTo>
    <relationshipLabel>Workstreams</relationshipLabel>
    <relationshipName>Workstreams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>