force-app/main/default/objects/PgM_Workstream__c/fields/PgM_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>PgM_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Workstreams1</relationshipName>
    <type>Lookup</type>
</CustomField>