force-app/main/default/objects/PgM_Workstream__c/recordTypes/PgM_Enabling.recordType-meta.xml
<RecordType>
    <fullName>PgM_Enabling</fullName>
    <active>true</active>
    <label>Enabling</label>
</RecordType>