force-app/main/default/objects/PgM_Workstream__c/recordTypes/PgM_Product.recordType-meta.xml
<RecordType>
    <fullName>PgM_Product</fullName>
    <active>true</active>
    <label>Product</label>
</RecordType>