force-app/main/default/objects/PgM_Workstream__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>PgM_Product_Leader__c</columns>
    <columns>PgM_Program__c</columns>
    <columns>PgM_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>